Add basic HTML structure for Lukio Simulator

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            Lukio Simulator
+        </title>
+    </head>
+    <body>
+        <h2>Lukio Simulator</h2>
+    </body>
+</html>
