--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
     <script src='scripts/main.js'></script>
+    <script src='scripts/shop.js'></script>
 </head>
 <body>
     <div class="parent">
@@ -21,7 +23,7 @@
         </div>
         <div class="sideBar"><ul class="shop">
             <li><button id="hireTeacherBtn">Hire Teacher (Cost: 5)</button></li>
-            <li class="teacherTraining"><button id="trainTeachersBtn">Train Teachers (cost: 50)</button></li>
+            <li><button id="trainTeachersBtn">Train Teachers (cost: 50)</button></li>
         </ul></div>
     </div>
 </body>
