--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <title>Lukio Simulator</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="viewport" content="width=device-width, height=device-height,initial-scale=1.0">
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
     <script src='scripts/main.js'></script>
     <script src='scripts/shop.js'></script>
@@ -14,18 +14,20 @@
 </head>
 <body>
     <div class="parent">
+        <div class="mainDisplay">
+            <h2 id="moneyDisplay">Rahasi: 0</h2>
+            <h2 id="incomeDisplay">Tuottosi: 0/sek</h2>
+            <h2 id="teachersDisplay">Opettajasi: 0</h2>
+            <h2 id="studentsDisplay">Oppilaasi: 0</h2>
+            <h2 id="fundingDisplay">Rahoituksesi: 0</h2>
+        </div>
         <div class="header">
             <h1>Lukio Simulator</h1>
             <h2>Version 0.0.1</h2>
             <h2 id="dateDisplay">Päivä: 1</h2>
             <h2 id="nameDisplay">...Lukio</h2>
         </div>
-        <div class="mainContent">
-            <h2 id="moneyDisplay">Rahasi: 0</h2>
-            <h2 id="incomeDisplay">Tuottosi: 0/sek</h2>
-            <h2 id="teachersDisplay">Opettajasi: 0</h2>
-            <h2 id="studentsDisplay">Oppilaasi: 0</h2>
-            <h2 id="fundingDisplay">Rahoituksesi: 0</h2>
+        <div class="buttonArea" id="buttonArea">
             <img src="images/button.png" class="buttonImg">
             <div class="studentAnimation">
                 <img src="images/student1.png" class="studentAnimationImg" id="studentImg1">
@@ -33,9 +35,10 @@
                 <img src="images/student3.png" class="studentAnimationImg" id="studentImg3">
             </div>
         </div>
-        <div class="quickTImeArea">
-            <h2 id="quickTimeDisplay">quickTimeEvents</h2>
+        <div class="quickTimeArea">
+            <h3 id="quickTimeDisplay">quickTimeEvents</h2>
         </div>
+        <div id="div5"></div>
         <div class="sideBar"><ul class="shop">
             <li><button id="hireTeacherBtn">Palkkaa Opettaja (Hinta: 5)</button></li>
             <li><button id="trainTeachersBtn">Kouluta Opettajiasi (Hinta: 50)</button></li>
