--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <div class="mainDisplay">
             <h2 id="moneyDisplay">Rahasi: 0</h2>
             <h2 id="incomeDisplay">Tuottosi: 0/sek</h2>
-            <h2 id="teachersDisplay">Opettajasi: 0</h2>
-            <h2 id="studentsDisplay">Oppilaasi: 0</h2>
             <h2 id="fundingDisplay">Rahoituksesi: 0</h2>
+            <h2 id="teachersDisplay">Opettajasi: 0</h2>
+            <h2 id="studentsDisplay">Opiskelijasi: 0</h2>
+            <h2 id="studentHappinessDisplay">Opiskelijoiden tyytyväisyys: 100%</h2>
         </div>
         <div class="header">
             <h1>Lukio Simulator</h1>
@@ -42,7 +43,7 @@
         </div>
         <div id="div5"></div>
         <div class="sideBar"><ul class="shop">
-            <li><button id="buyClassroom">Osta lisää luokkia (Hinta: 500)</button></li>
+            <li><button id="buyClassroom">Osta lisää luokkia (Hinta: 200)</button></li>
             <li><button id="hireTeacherBtn">Palkkaa Opettaja (Hinta: 15)</button></li>
             <li><button id="trainTeachersBtn">Kouluta Opettajiasi (Hinta: 100)</button></li>
         </ul></div>
