--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Lukio Simulator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' media='screen' href='styles/main.css'>
+    <script src="scripts/api.js"></script>
     <script src='scripts/main.js'></script>
     <script src='scripts/shop.js'></script>
     <script src="scripts/quickTime.js"></script>
@@ -17,18 +18,18 @@
 <body>
     <div class="parent">
         <div class="mainDisplay">
-            <h2 id="moneyDisplay">Rahasi: 0</h2>
-            <h2 id="incomeDisplay">Tuottosi: 0/sek</h2>
-            <h2 id="fundingDisplay">Rahoituksesi: 0</h2>
-            <h2 id="teachersDisplay">Opettajasi: 0</h2>
-            <h2 id="studentsDisplay">Opiskelijasi: 0</h2>
-            <h2 id="studentHappinessDisplay">Opiskelijoiden tyytyväisyys: 100%</h2>
+            <h3 id="moneyDisplay">Rahasi: 0</h3>
+            <h3 id="incomeDisplay">Tuottosi: 0/sek</h3>
+            <h3 id="fundingDisplay">Rahoituksesi: 0</h3>
+            <h3 id="teachersDisplay">Opettajasi: 0</h3>
+            <h3 id="studentsDisplay">Opiskelijasi: 0</h3>
+            <h3 id="studentHappinessDisplay">Opiskelijoiden tyytyväisyys: 100%</h3>
         </div>
         <div class="header">
             <h1>Lukio Simulator</h1>
-            <h2>Version 0.0.2</h2>
-            <h2 id="dayDisplay">Päivä: 1</h2>
-            <h2 id="nameDisplay">...Lukio</h2>
+            <h3>Version 0.0.2</h3>
+            <h3 id="dayDisplay">Päivä: 1</h3>
+            <h3 id="nameDisplay">...Lukio</h3>
         </div>
         <div class="buttonArea" id="buttonArea">
             <img src="images/button.png" class="buttonImg" id="buttonImg">
@@ -39,11 +40,12 @@
             </div>
         </div>
         <div class="quickTimeArea">
-            <h3 id="quickTimeDisplay">quickTimeEvents</h2>
+            <h3 id="quickTimeDisplay">quickTimeEvents</h3>
         </div>
         <div id="div5"></div>
         <div class="sideBar"><ul class="shop">
             <li><button id="buyClassroom">Osta lisää luokkia (Hinta: 200)</button></li>
+            <li><button id="expandClassrooms">Laajenna luokkatilojasi (Hinta: 500)</button></li>
             <li><button id="hireTeacherBtn">Palkkaa Opettaja (Hinta: 15)</button></li>
             <li><button id="trainTeachersBtn">Kouluta Opettajiasi (Hinta: 100)</button></li>
         </ul></div>
