--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="scripts/quickTime.js"></script>
     <script src="scripts/time.js"></script>
     <script src="scripts/button.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9778669571492834" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="parent">
